<resources>
    <string name="app_name">LAB5</string>
    <string name="Name">Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="select_all">SELLECT ALL</string>
    <string name="add">ADD</string>
    <string name="sign_in">"SIGN IN "</string>
    <string name="delete">"DELETE "</string>
    <string name="update">UPDATE</string>
</resources>
