<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </LinearLayout>

    <Button
        android:id="@+id/select_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/select_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/select_all_btn">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="102dp"
        android:layout_height="44dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="276dp"
        android:layout_weight="1"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signin"
        android:layout_width="113dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="276dp"
        android:layout_weight="1"
        android:text="@string/sign_in"
        app:layout_constraintStart_toEndOf="@+id/add_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/del_btn"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/update"
        app:layout_constraintStart_toEndOf="@+id/del_btn"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="86dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:layout_weight="1"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:text="@string/user_name"
        app:layout_constraintEnd_toStartOf="@+id/name_et"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>